--- a/scripts/FInalWeek3.ipynb
+++ b/scripts/FInalWeek3.ipynb
@@ -594,8 +594,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'NQ0VZRXFYJPMXAEBK0GBQJLL53HEQ435LZ3F4TD15QTI0HO1' # your Foursquare ID\n",
-    "CLIENT_SECRET = '4SD1BMKLXX414YWFAVI5U412QEB1EHTK24F4YGVAHZQRXGXH' # your Foursquare Secret\n",
+    "CLIENT_ID = 'xxxxxxx' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'xxxxxxxx' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n"
    ]
   },
