Verison was out of date with GitHub - pushing newest one

--- a/scripts/Capstone_Project_Kickoff.ipynb
+++ b/scripts/Capstone_Project_Kickoff.ipynb
@@ -31,7 +31,9 @@
     "\n",
     "In order to ease the transition, we are targeting a location within Toronto that is most similar to our current residence of Dublin, Ohio. Toronto is a common visiting spot for people within the Ohio area of the United States, and is only a 6 hour drive. This makes it convenient to visit family and friends. \n",
     "\n",
-    "During this analysis, we will use our skills to pull data from the internet for Dublin and Toronto, use four square to pull neighborhood venues to compare using K-Means for our ideal cluster of locations, use four square again to find a realtor in our new area, and then use Folium to map our new neighborhoods!"
+    "During this analysis, we will use our skills to pull data from the internet for Dublin and Toronto, use four square to pull neighborhood venues to compare using K-Means for our ideal cluster of locations, use four square again to find a realtor in our new area, and then use Folium to map our new neighborhoods!\n",
+    "\n",
+    "This analysis would be beneficial for anyone who is looking to relocate or for real estate agents looking to help facilitate relocation. I used my current example as one that might be common and to help show the value in why this analysis would be useful. In this analysis, all the user needs to do is update Home town and target relocation spot to run this analysis."
    ]
   },
   {
